// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WuiFieldNumber is rendered 1`] = `
<wui-form-control-layout
  compressed="false"
  fullwidth="false"
  icon="alert"
  inputid="1"
  isloading="false"
>
  <wui-validatable-control>
    <input
      aria-label="aria-label"
      class="wuiFieldNumber testClass1 testClass2 wuiFieldNumber--withIcon"
      data-test-subj="test subject string"
      id="1"
      max="8"
      min="1"
      name="wazuh"
      step="1"
      type="number"
      value="1"
    />
  </wui-validatable-control>
</wui-form-control-layout>
`;

exports[`WuiFieldNumber props controlOnly is rendered 1`] = `
<wui-validatable-control>
  <input
    class="wuiFieldNumber"
    type="number"
  />
</wui-validatable-control>
`;

exports[`WuiFieldNumber props fullWidth is rendered 1`] = `
<wui-form-control-layout
  compressed="false"
  fullwidth="true"
  isloading="false"
>
  <wui-validatable-control>
    <input
      class="wuiFieldNumber wuiFieldNumber--fullWidth"
      type="number"
    />
  </wui-validatable-control>
</wui-form-control-layout>
`;

exports[`WuiFieldNumber props isInvalid is rendered 1`] = `
<wui-form-control-layout
  compressed="false"
  fullwidth="false"
  isloading="false"
>
  <wui-validatable-control
    isinvalid="true"
  >
    <input
      class="wuiFieldNumber"
      type="number"
    />
  </wui-validatable-control>
</wui-form-control-layout>
`;

exports[`WuiFieldNumber props isLoading is rendered 1`] = `
<wui-form-control-layout
  compressed="false"
  fullwidth="false"
  isloading="true"
>
  <wui-validatable-control>
    <input
      class="wuiFieldNumber wuiFieldNumber-isLoading"
      type="number"
    />
  </wui-validatable-control>
</wui-form-control-layout>
`;

exports[`WuiFieldNumber props readOnly is rendered 1`] = `
<wui-form-control-layout
  compressed="false"
  fullwidth="false"
  isloading="false"
  readonly="true"
>
  <wui-validatable-control>
    <input
      class="wuiFieldNumber"
      readonly=""
      type="number"
    />
  </wui-validatable-control>
</wui-form-control-layout>
`;

exports[`WuiFieldNumber props value no initial value 1`] = `
<wui-form-control-layout
  compressed="false"
  fullwidth="false"
  isloading="false"
>
  <wui-validatable-control>
    <input
      class="wuiFieldNumber"
      type="number"
      value=""
    />
  </wui-validatable-control>
</wui-form-control-layout>
`;

exports[`WuiFieldNumber props value value is number 1`] = `
<wui-form-control-layout
  compressed="false"
  fullwidth="false"
  isloading="false"
>
  <wui-validatable-control>
    <input
      class="wuiFieldNumber"
      type="number"
      value="0"
    />
  </wui-validatable-control>
</wui-form-control-layout>
`;
